Sync 2026-02-sáb. 07 1745
